# FFAI

./: README.md  build.gradle  gradle.properties  settings.gradle
.github/: README.md  dependabot.yml
.github/workflows/: build-and-release.yml  build.yml  nightly.yml  pr-checks.yml
.github/workflows/archive/: build-and-release.yml  nightly.yml
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  ffai_native.cpp
app/src/main/java/com/ffai/: FFAIApplication.kt  MainActivity.kt
app/src/main/java/com/ffai/camera/: CameraController.kt
app/src/main/java/com/ffai/config/: A21SOptimizer.kt  DeviceProfile.kt  FFAIConfig.kt
app/src/main/java/com/ffai/core/intent/: IntentPlanner.kt
app/src/main/java/com/ffai/core/orchestrator/: CentralOrchestrator.kt
app/src/main/java/com/ffai/core/policy/: PolicySelector.kt
app/src/main/java/com/ffai/gestures/: GestureController.kt
app/src/main/java/com/ffai/gestures/synthesis/: GestureSynthesizer.kt
app/src/main/java/com/ffai/humanization/parametric/: ParametricHumanizationEngine.kt
app/src/main/java/com/ffai/learning/adaptive/: AdaptiveLearningEngine.kt
app/src/main/java/com/ffai/learning/error/: ErrorMemory.kt
app/src/main/java/com/ffai/learning/rl/: ReinforcementLearningEngine.kt
app/src/main/java/com/ffai/memory/ltm/: LongTermMemory.kt
app/src/main/java/com/ffai/memory/mtm/: MediumTermMemory.kt
app/src/main/java/com/ffai/memory/retrieval/: MemoryRetrievalEngine.kt
app/src/main/java/com/ffai/memory/stm/: ShortTermMemory.kt
app/src/main/java/com/ffai/memory/ultra/: UltraShortTermMemory.kt
app/src/main/java/com/ffai/perception/: ObjectDetector.kt  ScreenAnalyzer.kt
app/src/main/java/com/ffai/personality/: PersonalityEngine.kt
app/src/main/java/com/ffai/service/: FFAIAccessibilityService.kt  FFAIForegroundService.kt  GestureExecutionService.kt  MLInferenceService.kt  ModelUpdateService.kt  ScreenCaptureService.kt
app/src/main/java/com/ffai/timing/: MultiRateTimingManager.kt
app/src/main/java/com/ffai/ui/: ControlPanelFragment.kt
app/src/main/java/com/ffai/util/: ThermalManager.kt
app/src/main/res/layout/: activity_main.xml  fragment_control_panel.xml
app/src/main/res/values/: colors.xml  strings.xml
app/src/main/res/xml/: accessibility_service_config.xml
app/src/test/java/com/ffai/: ExampleUnitTest.kt
config/detekt/: detekt.yml
docs/: ARCHITECTURE.md  CI_CD_SETUP.md
scripts/: generate-keystore-base64.sh
